4 player game layout

--- a/TCG_Nexus/local.properties
+++ b/TCG_Nexus/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 17 16:23:48 CET 2024
-sdk.dir=C\:\\Users\\LENOVO X280 i5 M2\\AppData\\Local\\Android\\Sdk
+#Wed Jan 17 22:47:21 CET 2024
+sdk.dir=C\:\\Users\\luisv\\AppData\\Local\\Android\\Sdk
