--- a/TCG_Nexus/local.properties
+++ b/TCG_Nexus/local.properties
@@ -4,9 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 17 22:47:21 CET 2024
-
-#luisv
-#LENOVO X280 i5 M2
-#sdk.dir=C\:\\Users\\luisv\\AppData\\Local\\Android\\Sdk
-sdk.dir=C\:\\Users\\LENOVO X280 i5 M2\\AppData\\Local\\Android\\Sdk
+#Wed Jun 12 16:29:26 CEST 2024
+sdk.dir=C\:\\Users\\luisv\\AppData\\Local\\Android\\Sdk
